--- a/css/base.css
+++ b/css/base.css
@@ -176,18 +176,24 @@ nav ul #search-button {
     margin: 10px;
 }
 
-.pet-editor-header {
+.pet-editor-header,
+.login-header,
+.register-header {
   margin-bottom: 10px;
 }
 
-.pet-editor-header h1 {
+.pet-editor-header h1,
+.login-header h1,
+.register-header h1 {
   font-size: 2em;
   color: #ff5722;
   font-weight: 800;
 }
 
 .pet-editor-form h2,
-.pet-editor-species h2 {
+.pet-editor-species h2,
+.login-form h2,
+.register-form h2 {
   font-size: 1.5em;
 
   color: #ff5722;
@@ -234,6 +240,17 @@ nav ul #search-button {
   list-style: decimal inside;
 }
 
+.login-form,
+.register-form {
+  background-color: #FFF;
+  margin: 10px auto;
+  width: 50%;
+  padding: 15px;
+  -webkit-box-shadow: 1px 1px 1px 1px #ccc;
+  -moz-box-shadow: 1px 1px 1px 1px #ccc;
+  box-shadow: 1px 1px 1px 1px #ccc;
+}
+
 /* Forms */
 form {
   margin-top: 10px;
@@ -259,6 +276,10 @@ form {
   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+textarea.form-control {
+  height: auto;
 }
 
 label {
