Error View Addition and Dynamic Profile Pages
Added implementation for changes in profile pages where certain elements
will only be shown when a user is logged in or looking at another user's
profile.
Also added a new view model for Errors in which it will display an error
page. This is used for when a search for a username cannot be found or
someone inputs an incorrect profileId in the query param of the URL.
Added search functionality for usernames that will redirect to the page
when found.

--- a/css/base.css
+++ b/css/base.css
@@ -80,6 +80,11 @@ nav > ul > li > a:hover {
     color: #ff5722;
 }
 
+nav ul form {
+    display: inline-block;
+    padding: 2px;
+}
+
 nav ul #search-bar {
     margin-left: 40px;
     display: inline-block;
@@ -156,7 +161,27 @@ nav ul #search-button {
     box-shadow: 1px 1px 1px 1px #ccc;
 }
 
+.pet-badge-active {
+    background-color: #FFF;
+    margin: 40px;
+    position: relative;
+    overflow: hidden;
+    width: auto;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #ff6f00;
+    -webkit-box-shadow: 1px 1px 1px 1px #ccc;
+    -mox-box-shadow: 1px 1px 1px 1px #ccc;
+    box-shadow: 1px 1px 1px 1px #ccc;
+}
+
 .pet-badge img {
+    width: 250px;
+    float: left;
+    margin: 0px 15px 0px 0px;
+}
+
+.pet-badge-active img {
     width: 250px;
     float: left;
     margin: 0px 15px 0px 0px;
