--- a/css/base.css
+++ b/css/base.css
@@ -201,6 +201,10 @@ nav ul #search-button {
     margin: 10px;
 }
 
+.pet-stats tr, td{
+    padding: 5px;
+}
+
 .pet-editor-header,
 .login-header,
 .register-header {
@@ -274,6 +278,14 @@ nav ul #search-button {
   -webkit-box-shadow: 1px 1px 1px 1px #ccc;
   -moz-box-shadow: 1px 1px 1px 1px #ccc;
   box-shadow: 1px 1px 1px 1px #ccc;
+}
+
+#select-active {
+    display: none;
+}
+
+.description-edit {
+    display: none;
 }
 
 /* Forms */
