Added Formatting for Search Page
when searching for a user, you will now have a uniform result page.

--- a/css/base.css
+++ b/css/base.css
@@ -140,6 +140,12 @@ nav form .form-control {
   box-shadow: 1px 1px 1px 1px #ccc;
 }
 
+.search-header {
+    color: #002a80;
+    text-decoration: underline;
+    font-size: 1.5em;
+}
+
 .profile-badge {
     width: 100%;
 }
