added logo, text animation for welcome page

--- a/base.css
+++ b/base.css
@@ -92,7 +92,7 @@ nav ul #search-button {
 }
 
 .logout, .login, .register {
-    float: right;   
+    float: right;
 }
 
 #container {
@@ -119,7 +119,7 @@ nav ul #search-button {
 }
 
 .profile-badge h1 {
-    font-size: 2em;   
+    font-size: 2em;
     margin-bottom: 10px;
     color: #ff5722;
     font-weight: 800;
@@ -139,10 +139,10 @@ nav ul #search-button {
 }
 
 .pet-container > h1 {
-    font-size: 2em;   
+    font-size: 2em;
     margin-bottom: 10px;
     color: #ff5722;
-    font-weight: 600; 
+    font-weight: 600;
 }
 
 .pet-badge {
@@ -163,7 +163,7 @@ nav ul #search-button {
 }
 
 .pet-stats {
-    float: left;   
+    float: left;
 }
 
 .pet-stats h1 {
@@ -173,7 +173,7 @@ nav ul #search-button {
 }
 
 .pet-stats p {
-    margin: 10px; 
+    margin: 10px;
 }
 
 .btn {
@@ -212,13 +212,93 @@ only screen and (min-device-pixel-ratio: 2) {
 
 }
 
+#logo{
+    font-size: 21px;
+    text-align: center;
+    height:250px;
+    width:512px;
+    margin: auto;
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera >
+                                     12.1 */
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+    -ms-animation: fadein 2s; /* Internet
+                                 Explorer */
+    -o-animation: fadein 2s; /* Opera <
+                                12.1 */
+animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.text {
+  width: 100%;
+  text-align: center;
+  height: 50px;
+  line-height: 50px;
+  font-size: 30px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: 350px -125px;
+}
+.text .content {
+  display: inline;
+}
+.text .dash {
+  display: inline-block;
+  height: 3px;
+  width: 20px;
+  background-color: #3498db;
+  animation: blink .3s infinite linear;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
 /* media queries */
 @media screen and (max-width: 1024px) {
-    
+
 }
 
 @media screen and (max-width: 768px) {
-    
+
 }
 
 @media screen and (max-width: 640px) {
