--- a/css/base.css
+++ b/css/base.css
@@ -406,6 +406,10 @@ label {
     margin-right: auto;
 }
 
+.battlefield h1 {
+    display: block;
+}
+
 .player_actions {
 	float: right;
 	padding: 5px;
